# confanalyzer

./: LICENSE  README.md  gitignore  install.sh  pyproject.toml
confanalyzer/: engine.py  main.py  rules.py  scanner.py  utils.py
samples/: sample2.yaml  sample3.ini  sample4.env
tests/: test_detection.py  test_filters.py
