
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confanalyzer"
version = "1.0.2"
description = "Linux configuration analyzer for likely security vulnerabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["colorama>=0.4.6"]

[project.scripts]
confanalyzer = "confanalyzer.main:main"

[tool.setuptools]
packages = ["confanalyzer"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
